--- a/assn06/case2/tutorial/pc_home.html
+++ b/assn06/case2/tutorial/pc_home.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Home Page of Pandaisia Chocolates
-    Author: 
-    Date:   
+    Author:  Reginald Robinson
+    Date:   3 November 2021
 
     Filename: pc_home.html
    -->
