--- a/assn08/tutorial/tb_komatsu.html
+++ b/assn08/tutorial/tb_komatsu.html
@@ -15,9 +15,9 @@
    
    <meta charset="utf-8" />
    <title>Tree and Book: The Komatsu Family</title>
-   <link href="tb_reset.css" ref="stylesheet" >
-   <link href="tb_styles1.css" ref="stylesheet" >
-   <link href="tb_visual1.css" ref="stylesheet" >
+   <link href="tb_reset.css" ref="stylesheet" />
+   <link href="tb_styles1.css" ref="stylesheet" />
+   <link href="tb_visual1.css" ref="stylesheet" />
 
 </head>
 
