--- a/assn08/tutorial/tb_komatsu.html
+++ b/assn08/tutorial/tb_komatsu.html
@@ -46,7 +46,12 @@
          <figure>
              <img src="tb_komatsu.png" alt="family portrait" />
              <figcaption> (L-R): Ikko, Mika, Miroji, Ganta, Susko </figcaption>
-         </figure>	 
+         </figure>	
+         <map name="family_map">
+            <area shape="rect" coords="74,74,123,141" href="tb_ikko.html" alt="Ikko Komatsu" />
+            <area shape="rect" coords="126,109,177,172" href="tb_mika.html" alt="Mika Komatsu" />
+            <area shape="rect" coords="180,157,230,214" href="tb_hiroji.html" alt="Hiroji Komatsu" />
+         </map>
       </header>
       
       <section id="leftColumn">
