--- a/assn08/case2/sf_torte.html
+++ b/assn08/case2/sf_torte.html
@@ -15,7 +15,8 @@
    
    <meta charset="utf-8" />
    <title>Save your Fork: Apple Bavarian Torte</title>
-
+   <link href="sf_base.css" ref="stylesheet" />
+   <link href="sf_layout.css" ref="stylesheet" />
 </head>
 
 <body>
