--- a/assn09/html05_tutorial/tutorial/tf_home.html
+++ b/assn09/html05_tutorial/tutorial/tf_home.html
@@ -14,9 +14,11 @@
    -->
    
    <title>Trusted Friends Daycare</title>
+   <meta charset="utf-8" />
+   <meta name="viewpoint"
+   content="width=device-width, initail-scale=1" />
    <link href="tf_reset.css" rel="stylesheet" />
    <link href="tf_styles1.css" rel="stylesheet" />
-   <meta charset="utf-8" />
 </head>
 
 <body>
