--- a/assn09/html06_tutorial/tutorial/dlr_evenings.html
+++ b/assn09/html06_tutorial/tutorial/dlr_evenings.html
@@ -53,6 +53,11 @@
 
             <table class="schedule">
                 <caption>All Times Centeral</caption>
+                <colgroup>
+                    <col id="firstCol" />
+                    <col class="dayCols" span="7" />
+                </colgroup>
+                <thead>
                 <tr> 
                 <th>Time</th>
                 <th>Mon</th>
@@ -63,6 +68,13 @@
                 <th>Sat</th>
                 <th>Sun</th>                   
                 </tr>
+               </thead>
+               <tfoot>
+                   <tr>
+                       <td colspan="8">DLR ends its broadcast day at 10:30 p.m.</td>
+                   </tr>
+               </tfoot>
+               <tbody> 
                 <tr>
                     <th>6:00 PM</th>
                     <td colspan="7">National News</td>
@@ -111,6 +123,7 @@
                 <th>10:00 PM</th>
                 <td colspan="7">World News Feed</td>
             </tr>
+            </tbody>
             </table>
          
       </section>
